# kart

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
corpus/: README.md
models/: README.md
src/: bert_ner_experiment.sh  get_google_bert_model.sh  make_mimic_iii_dummy_phi.sh  make_pretraining_data.sh  pretrain_bert_from_bert_base_uncased.sh  pretrain_bert_from_scratch.sh
src/mimic_iii_dummy_phi/: __init__.py  part_1_create_common_data.sh  part_2_create_surrogate_mapping.sh  part_3_embed_dummy_phi_without_surrogate_mapping.sh  part_4_embed_dummy_phi_with_surrogate_mapping.sh  part_5_concatenate_noteevents.py  placeholder_to_surrogate.py  surrogate_mapping.py
src/model_performance_check/: bert_ner_experiment.sh  check_bert_performance_on_i2b2_2006.sh  check_bert_performance_on_ncbi_bc5cdr.sh
src/modules/logging/: logger.py
src/modules/mimic_iii_dummy_phi/: _old_make_mimic_iii_dummy_phi_subsets.py  make_mimic_iii_dummy_phi_subsets.py  part_1_create_common_data.sh  part_2_create_surrogate_mapping.sh  part_3_embed_dummy_phi_without_surrogate_mapping.sh  part_4_embed_dummy_phi_with_surrogate_mapping.sh  part_5_concatenate_noteevents.py  part_6_make_mimic_iii_dummy_phi_subsets.py
src/modules/pretraining/: corpus_to_tfrecord.sh  noteevents_to_pretraining_corpus.py  tf_fine_tune_BERT_stage1.sh  tf_scratch_BERT_stage1.sh
src/modules/privacy/: README.md  extract_diseases_from_mimic_iii_dummy_phi.py  extract_diseases_from_nlg_result.py  extract_full_name_mentions_from_mimic_iii_dummy_phi.py  nlg_with_bert.py  (+5 more)
(+7 files in other folders)
