[tool.poetry]
name = "kart"
version = "0.1.0"
description = ""
authors = ["yutanakamura-tky <yutanakamura.tky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.4"
pandas = "0.24.2"
tqdm = "^4.54.1"
sklearn = "^0.0"
tensorflow = ">1.12.0"
torch = "1.4.0"
transformers = "4.4.2"
Faker = "4.0.3"
tensorflow-gpu = "1.12.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
